--- a/quantconnect/pair_tester.ipynb
+++ b/quantconnect/pair_tester.ipynb
@@ -21,8 +21,8 @@
     "import math\n",
     "qb = QuantBook()\n",
     "\n",
-    "s1 = qb.AddEquity(\"v\")\n",
-    "s2 = qb.AddEquity(\"ma\")\n",
+    "s1 = qb.AddEquity(\"msft\")\n",
+    "s2 = qb.AddEquity(\"amzn\")\n",
     "start_date = datetime(2016,1,1)\n",
     "end_date = datetime(2018,1,1)\n",
     "HEDGE_LOOKBACK = 15\n",
@@ -136,21 +136,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "correlation 0.9888077019794959\n",
-      "cointegration 0.3180816667410813\n",
-      "adfprices 0.9784871714879543\n",
-      "adfuller 0.5768285848370127\n",
-      "hurst 0.5557040684138022\n",
-      "halflife 57.208829737619006\n",
-      "shapirowilke 2.2273021205165833e-09\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spreads = ss.zscore(get_spreads(series1,series2,dist), nan_policy='omit')\n",
     "\n",
@@ -168,21 +154,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "correlation 0.9888077019794959\n",
-      "cointegration 0.2607262621988855\n",
-      "adfprices 0.9784871714879543\n",
-      "adfuller 0.5924926542228149\n",
-      "hurst 0.5547838849524142\n",
-      "halflife 58.17888015755365\n",
-      "shapirowilke 1.0125641436431465e-09\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spreads = ss.zscore(get_spreads(series2,series1,dist), nan_policy='omit')\n",
     "\n",
